Fixed all the layouts for field notes so the spacing is closer

--- a/src/styles/5-pages/experiences.scss
+++ b/src/styles/5-pages/experiences.scss
@@ -104,7 +104,7 @@
   grid-template-columns: 1fr repeat(18, 4vw) 1fr;
   gap: 1em;
   width: 100%;
-  padding: 6em;
+  margin-bottom: 3em;
   align-items: start;
 
   figcaption {
@@ -267,7 +267,6 @@
 
 .photo-section-3 {
   grid-template-rows: 1fr 1fr;
-  margin-bottom: 10em;
 }
 .photo-section-3 .layout-item:first-child {
   grid-column: 5/15;
